--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
   </div>
 
   <script type="module">
+  // Detect if on phone (you can adjust threshold if needed)
+const isMobile = window.innerWidth < 768;
+let starRadius = isMobile ? 20 : 30;
+
     import {
       FilesetResolver,
       PoseLandmarker
@@ -89,19 +93,43 @@
       game.star={x,y,r};
     }
 
-    function drawStar(x,y,r){
-      ctx.save(); ctx.translate(x,y); ctx.fillStyle='#fff';
-      ctx.shadowColor='#fff'; ctx.shadowBlur=25;
-      ctx.beginPath();
-      const spikes=5, outer=r, inner=r*0.5;
-      let rot=Math.PI/2*3; let cx=0,cy=0;
-      ctx.moveTo(cx,cy-outer);
-      for(let i=0;i<spikes;i++){
-        cx=Math.cos(rot)*outer; cy=Math.sin(rot)*outer; ctx.lineTo(cx,cy); rot+=Math.PI/5;
-        cx=Math.cos(rot)*inner; cy=Math.sin(rot)*inner; ctx.lineTo(cx,cy); rot+=Math.PI/5;
-      }
-      ctx.lineTo(0,-outer); ctx.closePath(); ctx.fill(); ctx.restore();
-    }
+  // Decide star size based on screen width
+// Use the starRadius variable already declared above
+
+function drawStar(x, y) {
+  ctx.save();
+  ctx.translate(x, y);
+  ctx.fillStyle = '#fff';
+  ctx.shadowColor = '#fff';
+  ctx.shadowBlur = 25;
+
+  ctx.beginPath();
+  const spikes = 5;
+  const outer = starRadius;
+  const inner = starRadius * 0.5;
+
+  let rot = Math.PI / 2 * 3;
+  let cx = 0, cy = 0;
+
+  ctx.moveTo(cx, cy - outer);
+
+  for (let i = 0; i < spikes; i++) {
+    cx = Math.cos(rot) * outer;
+    cy = Math.sin(rot) * outer;
+    ctx.lineTo(cx, cy);
+    rot += Math.PI / 5;
+
+    cx = Math.cos(rot) * inner;
+    cy = Math.sin(rot) * inner;
+    ctx.lineTo(cx, cy);
+    rot += Math.PI / 5;
+  }
+
+  ctx.lineTo(0, -outer);
+  ctx.closePath();
+  ctx.fill();
+  ctx.restore();
+}
 
     function isTorsoVisible(landmarks){
       if(!landmarks||landmarks.length<23) return false;
@@ -173,10 +201,19 @@
         }
       }
 
-      if(game.mode==='finished'){
-        ctx.fillStyle='#fff';ctx.font='24px sans-serif';ctx.textAlign='center';
-        ctx.fillText('You caught all stars! Tap to restart',canvas.width/2,canvas.height/2);
-      }
+     if (game.mode === 'finished') {
+  ctx.fillStyle = '#fff';
+  ctx.font = 'bold 48px Arial';
+  ctx.textAlign = 'center';
+  ctx.shadowColor = '#fff';
+  ctx.shadowBlur = 20;
+  ctx.fillText('🎉 Done! 🎉', canvas.width / 2, canvas.height / 2);
+
+  ctx.shadowBlur = 0; // reset shadow for next frame
+  ctx.font = '20px Arial';
+  ctx.fillText('Tap anywhere to restart', canvas.width / 2, canvas.height / 2 + 50);
+}
+
 
       requestAnimationFrame(loop);
     }
